css/navmenu.css
html, body {
  height: 100%;
}
body {
  padding: 50px 0 0 0;
}

.navmenu {
  padding-top: 50px;
}

.navbar {
    text-align: center;
    background-image: url("../images/debut_dark_@2X.png");
}
.navbar-brand {
  display: inline-block;
  float: none;
}
.navbar-toggle {
  float: left;
  margin-left: 15px;
  position: absolute;
}

.navmenu-default {
    background-image: url("../images/debut_dark_@2X.png");
}
.container {
    background-image: url("../images/debut_dark_@2X.png");
}

@media (min-width: 992px) {
  body {
    padding: 0 0 0 200px;
  }
  .navmenu {
    padding-top: 0;
  }
  #title {
    position: absolute;
    top: 0.8em;
    left: 15em;
    width: 320px;
    z-index: 20000;
    padding: 0 0.5em 0.5em 0.5em;
  }
}
@media (max-width: 992px) {
    #title {
        position: absolute;
        top: 0.8em;
        left: 4em;
        width: 320px;
        z-index: 20000;
        padding: 0 0.5em 0.5em 0.5em;
    }
}

